# false-starts

./: README.md
mesachie/: .gitignore  README.md  config.py  outline.md  pyproject.toml  setup.cfg  tasks.py
mesachie/data/: citations.bib  glossary.yml  links.yml
mesachie/docs/: index.html
mesachie/src/: index.md
nitinat/: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  config.py  development.txt  links.yml  requirements.txt  setup.cfg  tasks.py
nitinat/cleaned/: canadian-dietary-radionuclides-2000-2020.csv
nitinat/data/: README.md  data-dictionary.txt
nitinat/docs/: ci.html  configuration.html  credits.html  data.html  database.html  dataset.html  dependencies.html  documentation.html  index.html  indexing.html  layered.html  license.html  links.html  logging.html  packaging.html  parameters.html  pipeline-01.html  pipeline-02.html  pipeline-03.html  project.html  quality.html  reproducible.html  results.html  setback-01.html  starting.html  technical-debt-01.html  technical-debt-02.html  testing.html  website-01.html  website-02.html
nitinat/nitinat/: __init__.py  data.py  parameters.py  plotting.py
nitinat/parameters/: fraction-0.1.json  nth-50.json
nitinat/src/: ci.md  configuration.md  credits.md  data.md  database.md  dataset.md  dependencies.md  documentation.md  index.md  indexing.md  layered.md  license.md  logging.md  packaging.md  parameters.md  pipeline-01.md  pipeline-02.md  pipeline-03.md  project.md  quality.md  reproducible.md  results.md  setback-01.md  starting.md  technical-debt-01.md  technical-debt-02.md  testing.md  (+2 more)
(+982 files in other folders)
