[metadata]
name = mesachie
version = attr: mesachie.__version__
author = Greg Wilson
author_email = gvwilson@third-bit.com
description = A compassionate, evidence-based introduction to software engineering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gvwilson/mesachie
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
