[metadata]
name = nitinat
version = attr: nitinat.__version__
author = Greg Wilson
author_email = greg@deepgenomics.com
description = A model data analysis project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gvwilson/nitinat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = nitinat
python_requires = >=3.9
install_requires =
  kaleido >= 0.2
  pandas >= 1.4
  plotly >= 5.6
  pydantic >= 1.9.0
  pyyaml >= 5.4
  requests >= 2.27
  statsmodels >= 0.13
